<resources>
    <string name="app_name">Emotion Track</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="enter_user_name">Enter Your Username</string>
    <string name="enter_password">Enter password</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="send_questionnaire">Send Questionnaire</string>
    <string name="title_activity_login_user">Login</string>
    <string name="questionnaire">Questionnaire</string>
    <string name="change_profile">Change Profile</string>
    <string name="take_picture">Take Picture</string>
    <string name="connect_fitbit">Connect Fitbit</string>
    <string name="delete_account">Admin Test</string>
    <string name="menu">Menu</string>
    <string name="take_a_photo">Take Photo</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="register_name">Registration</string>
    <string name="register">Register</string>
    <string name="user_name">Name:</string>
    <string name="user_password">Password:</string>
    <string name="user_question">Question:</string>
    <string name="user_answer">Answer:</string>
    <string name="questionnaire_headline">Questionnaire</string>
    <string name="show_graph_line">Show Graph Line</string>
    <string name="show_graph_bar">Show Graph Bar</string>
    <string name="show_graph_pie">Show Graph Pie</string>
    <string name="my_reports">My Reports</string>
    <string name="email_hint">Enter Your Email Address</string>
    <string name="user_email">Email:</string>
    <string name="chooseReportTitle">Emotion Report</string>
    <string name="maxDaysReport">All Time</string>
    <string name="lastSevenDaysReport">Last 7 days</string>
    <string name="lastThirtyDaysReport">Last 30 days</string>
    <string name="monthlyReport">By month</string>
    <string name="showNegativeSetimentInfo">Negative sentiment report</string>
    <string name="showGenrealInfo">Radar Report</string>
    <string name="showPositiveSetimentInfo">Positive sentiment report</string>
    <string name="openEmotionPiechart">Emotions Chart</string>
    <string name="openEmotionBarchart">Object Chart</string>
    <string name="notify">What time do you want to be reminded?</string>
    <string name="repeat">Days interval between notifications</string>
    <string name="days">days</string>
    <string name="open_app_usage_setting">Open Apps with usage access settings</string>
    <string name="last_time_used">"Last time used: "</string>
    <string name="time_span">"Time span: "</string>
    <string name="display_order_text">Sort by:</string>
    <string name="app_name_label">App</string>
    <string name="last_time_used_label">Last time used</string>
    <string name="usage_time_label">Usage time</string>
    <string name="title_activity_plcaes_on_map">Map</string>
    <string name="openEmotionLocationMap">Locations</string>
    <string name="openUsageBarchart">App Usage</string>
    <string name="showHistory">History</string>
    <string name="historyList">History List</string>
    <string name="weeklyReport">Weekly Report</string>
    <string name="noData">No Data</string>
    <string name="remember">Keep me signed in</string>
    <string name="week">Week</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="semanticMood">Semantic location report</string>

</resources>
