<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround"
    tools:context=".Activities.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_80sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/register_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="@dimen/_30sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_190sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/name_register"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/userNameRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Write your name"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/password_register"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_password"
                android:textAlignment="center"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/userPasswordRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="Enter your password"
                android:inputType="textPassword"
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/email_register"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/user_email"
                android:textAlignment="center"
                android:textSize="@dimen/_15sdp" />

            <EditText
                android:id="@+id/userEmailRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textPersonName"
                android:text=""
                android:textSize="@dimen/_15sdp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_100sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/registerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_15sdp"
                android:layout_weight="1"
                android:background="@drawable/buttonshape"
                android:text="@string/register"
                android:textSize="@dimen/_20sdp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>