<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backround"
    tools:context=".Activities.MainActivity">

    <EditText
        android:id="@+id/code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_185sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Enter Code Here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiles" />

    <TextView
        android:id="@+id/code_label_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_190sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="Confirm Code"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.103"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiles" />

    <Button
        android:id="@+id/login_button_firstlogin"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:background="@drawable/buttonshape"
        android:onClick="confirm"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/code_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_70sdp"
        android:text="Code"
        android:textColor="#000000"
        android:textSize="20sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiles" />

    <EditText
        android:id="@+id/code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:autofillHints=""
        android:ems="10"
        android:hint="Enter Code Here"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="22sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiles" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/chooseReportTitle"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="@dimen/_30sdp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/smiles"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/smiles"
        android:layout_width="@dimen/_300sdp"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginBottom="@dimen/_300sdp"
        android:contentDescription="smiles"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5"
        app:srcCompat="@drawable/smiles" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_user_name"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiles" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_110sdp"
        android:layout_marginTop="@dimen/_45sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="#000000"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:background="@drawable/buttonshape"
        android:onClick="login"
        android:text="@string/login"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registerBtn"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_60sdp"
        android:background="@drawable/buttonshape"

        android:onClick="register"
        android:text="@string/register"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/username_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/username"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/smiles" />

    <TextView
        android:id="@+id/password_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/password"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/password"
        app:layout_constraintHorizontal_bias="0.038"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_label" />

    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:onClick="forgotPasswordPage"
        android:text="Forgot Password? Click here "
        android:textColor="@android:color/holo_blue_dark"
        android:textColorHighlight="@android:color/holo_blue_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.105"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <Button
        android:id="@+id/sendCode"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_145sdp"
        android:background="@drawable/buttonshape"
        android:onClick="continueForgotPasswordProcess"
        android:text="Send Code"
        android:textColor="#000000"
        android:textSize="30sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/confirmNewPass"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_130sdp"
        android:background="@drawable/buttonshape"
        android:onClick="setNewPassword"
        android:text="Set Password"
        android:textColor="#000000"
        android:textSize="24sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/rememberMeCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:checked="false"
        android:lineSpacingExtra="20sp"
        android:text="@string/remember"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_label"
        app:layout_constraintVertical_bias="0.31" />

</androidx.constraintlayout.widget.ConstraintLayout>